--- a/contacto.html
+++ b/contacto.html
@@ -19,7 +19,7 @@
   <main>
     <h2>Contáctanos</h2>
     <p>Puedes escribirnos a pupipalladino@gmail.com</p>
-    <p>Tel: +54 2345524485</p>
+    <p>Tel: +54 2345</p>
   </main>
   <footer>
     <p>&copy; 2025 Empresa Demo - Todos los derechos reservados</p>
