--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
   <main>
     <h2>Bienvenidos a nuestra empresa</h2>
     <p>Ofrecemos soluciones innovadoras para tu negocio.</p>
+    <h3>Nuestros productos</h3>
+
+<img src="taza homero.png" alt="Taza de Homero" width="300">
+<img src="taza con frase.png" alt="Taza con frase inspiradora" width="300">
   </main>
   <footer>
     <p>&copy; 2025 Empresa Demo - Todos los derechos reservados</p>
