--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inicio - Empresa Demo</title>
+  <title>Inicio - Einar sublimaciones</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header>
-    <h1>Mi empresa SRL</h1>
+    <h1>Sublimaciones Einar</h1>
     <nav>
       <a href="index.html">Inicio</a>
       <a href="servicios.html">Servicios</a>
@@ -18,8 +18,9 @@
   </header>
   <main>
     <h2>Bienvenidos a nuestra empresa</h2>
-    <p>Ofrecemos soluciones innovadoras para tu negocio.</p>
-    <h3>Nuestros productos</h3>
+    <div style="background-image: url(einar.png); background-size: cover; background-position: center; padding: 50px 0;">
+    <p>Ofrecemos todo tipo de sublimado</p>
+    <h3>Nuestros productos tazas, billeteras, gorras, estampados</h3>
 
 <img src="taza homero.png" alt="Taza de Homero" width="300">
 <img src="taza con frase.png" alt="Taza con frase inspiradora" width="300">
