Update header and main section styles in index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,19 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header>
+  <<header style="background-color: green; display: flex; align-items: center; justify-content: space-between; padding: 500px 300px;">
+  <div style="display: flex; align-items: center;">
+    <img src="einar.png" alt="einar" style="height: 500px; margin-right: 300px;">
+    <h1 style="color: green; margin: 0;">Sublimaciones Einar</h1>
+  </div>
+  <nav>
+    <a href="index.html" style="color: red; margin-right: 15px;">Inicio</a>
+    <a href="servicios.html" style="color: red; margin-right: 15px;">Servicios</a>
+    <a href="nosotros.html" style="color: black; margin-right: 15px;">Nosotros</a>
+    <a href="contacto.html" style="color: red;">Contacto</a>
+  </nav>
+</header>
+>
     <h1>Sublimaciones Einar</h1>
     <nav>
       <a href="index.html">Inicio</a>
@@ -18,7 +30,7 @@
   </header>
   <main>
     <h2>Bienvenidos a nuestra empresa</h2>
-    <div style="background-image: url(einar.png); background-size: cover; background-position: center; padding: 50px 0;">
+    <div style="background-image: url(einar.png); background-size: cover; background-position: center; padding: 400px 0;">
     <p>Ofrecemos todo tipo de sublimado</p>
     <h3>Nuestros productos tazas, billeteras, gorras, estampados</h3>
 
