Change 'Contacto' link color to black

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <a href="index.html" style="color: red; margin-right: 15px;">Inicio</a>
     <a href="servicios.html" style="color: red; margin-right: 15px;">Servicios</a>
     <a href="nosotros.html" style="color: black; margin-right: 15px;">Nosotros</a>
-    <a href="contacto.html" style="color: red;">Contacto</a>
+    <a href="contacto.html" style="color: black;">Contacto</a>
   </nav>
 </header>
 >
