--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <nav>
     <a href="index.html" style="color: red; margin-right: 15px;">Inicio</a>
     <a href="servicios.html" style="color: red; margin-right: 15px;">Servicios</a>
-    <a href="nosotros.html" style="color: black; margin-right: 15px;">Nosotros</a>
-    <a href="contacto.html" style="color: black;">Contacto</a>
+    <a href="nosotros.html" style="color: red; margin-right: 15px;">Nosotros</a>
+    <a href="contacto.html" style="color: red;">Contacto</a>
   </nav>
 </header>
 >
@@ -30,11 +30,11 @@
   </header>
   <main>
     <h2>Bienvenidos a nuestra empresa</h2>
-    <div style="background-image: url(einar.png); background-size: cover; background-position: center; padding: 400px 0;">
+    <div style="background-image: url(einar.png); background-size: cover; background-position: center; padding: 600px 0;">
     <p>Ofrecemos todo tipo de sublimado</p>
     <h3>Nuestros productos tazas, billeteras, gorras, estampados</h3>
 
-<img src="taza homero.png" alt="Taza de Homero" width="300">
+<img src="taza homero.png" alt="Taza de Homero" width="300">tyle="color: green
 <img src="taza con frase.png" alt="Taza con frase inspiradora" width="300">
   </main>
   <footer>
