--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <<header style="background-color: green; display: flex; align-items: center; justify-content: space-between; padding: 50px 10px;">
   <div style="display: flex; align-items: center;">
-    <img src="einar.png" alt="einar" style="height: 50px; margin-right: 10px;">
+    <img src="einar.png" alt="einar" style="center: 50px; margin-center: 10px;">
     <h1 style="color: green; margin: 0;">Sublimaciones Einar</h1>
   </div>
   <nav>
@@ -19,18 +19,17 @@
     <a href="contacto.html" style="color: red;">Contacto</a>
   </nav>
 </header>
->
     <h1>Sublimaciones Einar</h1>
     <nav>
-      <a href="index.html">Inicio</a>
-      <a href="servicios.html">Servicios</a>
-      <a href="nosotros.html">Nosotros</a>
-      <a href="contacto.html">Contacto</a>
+      <a href="index.html"style="color: black; text-decoration: none; margin: 0 10px;">Inicio</a>
+      <a href="servicios.html"style="color: black; text-decoration: none; margin: 0 10px;">Servicios</a>
+      <a href="nosotros.html"style="color: black; text-decoration: none; margin: 0 10px;">Nosotros</a>
+      <a href="contacto.html"style="color: black; text-decoration: none; margin: 0 10px;">Contacto</a>
     </nav>
   </header>
   <main>
     <h2>Bienvenidos a nuestra empresa</h2>
-    <div style="background-image: url(einar.png); background-size: cover; background-position: center; padding: 600px 0;">
+    <div style="background-image: url(einar.png); background-size: cover; background-position: center; padding: 50px 0;">
     <p>Ofrecemos todo tipo de sublimado</p>
     <h3>Nuestros productos tazas, billeteras, gorras, estampados</h3>
 
@@ -38,7 +37,7 @@
 <img src="taza con frase.png" alt="Taza con frase inspiradora" width="300">
   </main>
   <footer>
-    <p>&copy; 2025 Empresa Demo - Todos los derechos reservados</p>
+    <p>&copy; 2025 Empresa - Todos los derechos reservados</p>
   </footer>
 </body>
 </html>
