--- a/index.html
+++ b/index.html
@@ -9,14 +9,8 @@
 <body>
   <<header style="background-color: green; display: flex; align-items: center; justify-content: space-between; padding: 50px 10px;">
   <div style="display: flex; align-items: center;">
-    <img src="einar.png" alt="einar" style="center: 50px; margin-center: 10px;">
     <h1 style="color: green; margin: 0;">Sublimaciones Einar</h1>
   </div>
-  <nav>
-    <a href="index.html" style="color: red; margin-right: 15px;">Inicio</a>
-    <a href="servicios.html" style="color: red; margin-right: 15px;">Servicios</a>
-    <a href="nosotros.html" style="color: red; margin-right: 15px;">Nosotros</a>
-    <a href="contacto.html" style="color: red;">Contacto</a>
   </nav>
 </header>
     <h1>Sublimaciones Einar</h1>
@@ -33,7 +27,7 @@
     <p>Ofrecemos todo tipo de sublimado</p>
     <h3>Nuestros productos tazas, billeteras, gorras, estampados</h3>
 
-<img src="taza homero.png" alt="Taza de Homero" width="300">tyle="color: green
+<img src="taza homero.png" alt="Taza de Homero" width="300">
 <img src="taza con frase.png" alt="Taza con frase inspiradora" width="300">
   </main>
   <footer>
