Change background-size to background-contain

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </header>
   <main>
     <h2>Bienvenidos a nuestra empresa</h2>
-    <div style="background-image: url(einar.png); background-size: cover; background-position: center; padding: 50px 0;">
+    <div style="background-image: url(einar.png); background-contain: cover; background-position: center; padding: 50px 0;">
     <p>Ofrecemos todo tipo de sublimado</p>
     <h3>Nuestros productos tazas, billeteras, gorras, estampados</h3>
 
