Correct h1 tag in header section
Fix header h1 tag syntax in index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <<header style="background-color: green; display: flex; align-items: center; justify-content: space-between; padding: 50px 10px;">
   <div style="display: flex; align-items: center;">
-    <h1 style="color: green; margin: 0;">Sublimaciones Einar</h1>
+    <h1 style="color: green; margin: 0;"Sublimaciones Einar></h1>
   </div>
   </nav>
 </header>
